@@ -2,6 +2,7 @@
 
 2022-05-25
  - Added a new API: list plugins (e.g for marketplace)
+ - Added redirect URI validation in authorization request (addressed #374)
 
 
 # version 0.67.1
@@ -10,7 +11,7 @@
  - Implemented mapping of LDAP username to email
  - Handled null parameters in authorization requests
  
- 
+
 # version 0.67
 
 2022-05-09
@@ -24,7 +25,7 @@
 
 2022-03-31
  - Updated query and user-group name pattern.
- 2022-04-08
+2022-04-08
  - Added redirect_uri to client info API.
 2022-04-11
  - Added registration_date, refresh_token_expiry, source and is_permitted
